fix cursor on shift

--- a/client/stylesheets/inspinia/pages/_shifts.scss
+++ b/client/stylesheets/inspinia/pages/_shifts.scss
@@ -423,6 +423,7 @@
 
 			.shift-period {
 				color           : white;
+				cursor          : pointer;
 				margin          : 0;
 				padding         : 10px;
 				font-weight     : 400;
